# docx-mcp

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docx_mcp/: __init__.py  errors.py  server.py
docx_mcp/services/: __init__.py  document_io.py  document_style_ops.py  format_utils.py  read_ops.py  reference_ops.py  section_ops.py  style_ops.py  write_ops.py
docx_mcp/tools/: __init__.py  common.py  compat.py  document_style_tools.py  read_tools.py  reference_tools.py  section_tools.py  style_tools.py  write_tools.py
scripts/: check.sh
tests/: test_document_style_ops.py  test_read_ops.py  test_reference_ops.py  test_section_ops.py  test_style_ops.py  test_tool_compat.py  test_write_ops.py
